--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -5,7 +5,16 @@
                 <li><a href={{ path('app_home')}}>Accueil</a></li>
                 <li><a href={{path('app_about')}}>À propos</a></li>
                 <li><a href={{path('app_contact')}}>Contact</a></li>
-                <li><a href="">Connexion</a></li>
+                 {% if app.user %}
+                 <li>Bienvenue, {{ app.user.nom }}</li>
+                <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
+                {% else %}
+                <li><a href="{{ path('app_login') }}">Se connecter</a></li>
+                <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+                {% endif %}
+
+
+                {# <li><a href="{{path('app_login')}}">Connexion</a></li> #}
             </ul>
         </nav>
     </header>
