--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,2 +1,3 @@
 @import url("/assets/styles/css/detailsrestaurant.css");
 @import url("/assets/styles/css/base.css");
+@import url("/assets/styles/css/header.css");
