--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -1,20 +1,28 @@
 <header>
-        <h1>BOOKING RESTOOO</h1>
+    <div class="header-container">
+        <div class="logo-title">
+            <img src="{{ asset('build/img/restaurant-logo.png') }}" alt="Logo Restaurant" class="logo">
+            <h1>BOOKING RESTOOO</h1>
+        </div>
         <nav>
-            <ul>
-                <li><a href={{ path('app_home')}}>Accueil</a></li>
-                <li><a href={{path('app_about')}}>À propos</a></li>
-                <li><a href={{path('app_contact')}}>Contact</a></li>
-                 {% if app.user %}
-                 <li>Bienvenue, {{ app.user.nom }}</li>
-                <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
+            <ul class="nav-links">
+                <li><a href="{{ path('app_home') }}">Accueil</a></li>
+                <li><a href="{{ path('app_about') }}">À propos</a></li>
+                <li><a href="{{ path('app_contact') }}">Contact</a></li>
+
+                {% if app.user %}
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Bienvenue, {{ app.user.nom }}</a>
+                        <div class="dropdown-content">
+                            <a href="{{ path('app_profile') }}">Profil</a>
+                            <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                        </div>
+                    </li>
                 {% else %}
-                <li><a href="{{ path('app_login') }}">Se connecter</a></li>
-                <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+                    <li><a href="{{ path('app_login') }}">Se connecter</a></li>
+                    <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
                 {% endif %}
-
-
-                {# <li><a href="{{path('app_login')}}">Connexion</a></li> #}
             </ul>
         </nav>
-    </header>
+    </div>
+</header>
