likes and comments sections

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,5 @@
 @import url("/assets/styles/css/detailsrestaurant.css");
 @import url("/assets/styles/css/base.css");
 @import url("/assets/styles/css/header.css");
+@import url("/assets/styles/css/footer.css");
+@import url("/assets/styles/css/profile.css");
