--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -1,3 +1,13 @@
- <footer>
-        <p>&copy; 2025 Restaurant Gourmet. Tous droits réservés.</p>
-    </footer>
+<footer>
+    <div class="header-container">
+        <div class="logo-title">
+            <img src="{{ asset('build/img/restaurant-logo.png') }}" alt="Logo Restaurant" class="logo">
+            <span>© 2025 BADR Entreprise</span>
+        </div>
+    <div class="footer-social">
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+    </div>
+</footer>
