--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -2,9 +2,14 @@
     <div class="header-container">
         <div class="logo-title">
             <img src="{{ asset('build/img/restaurant-logo.png') }}" alt="Logo Restaurant" class="logo">
-            <h1>BOOKING RESTOOO</h1>
+            <h1>BOOKING RESTAURANT</h1>
         </div>
-        <nav>
+        <!-- Menu Burger -->
+        <div class="burger-menu" onclick="toggleMenu()">
+            ☰
+        </div>
+
+        <nav class="nav-links-container">
             <ul class="nav-links">
                 <li><a href="{{ path('app_home') }}">Accueil</a></li>
                 <li><a href="{{ path('app_about') }}">À propos</a></li>
@@ -26,3 +31,9 @@
         </nav>
     </div>
 </header>
+<script>
+// JavaScript to toggle the menu on mobile view
+function toggleMenu() {
+    document.querySelector(".nav-links-container").classList.toggle("active");
+}
+</script>
