--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -1,10 +1,10 @@
-<header>
+<header class="site-header">
     <div class="header-container">
         <div class="logo-title">
             <img src="{{ asset('build/img/restaurant-logo.png') }}" alt="Logo Restaurant" class="logo">
             <h1>BOOKING RESTAURANT</h1>
         </div>
-        <!-- Menu Burger -->
+
         <div class="burger-menu" onclick="toggleMenu()">
             ☰
         </div>
@@ -20,6 +20,9 @@
                         <a href="#" class="dropbtn">Bienvenue, {{ app.user.nom }}</a>
                         <div class="dropdown-content">
                             <a href="{{ path('app_profile') }}">Profil</a>
+                            {% if 'ROLE_ADMIN' in app.user.roles or 'ROLE_RESTAURATEUR' in app.user.roles or 'ROLE_USER' in app.user.roles%}
+                                <a href="{{ path('admin') }}">Administration</a>
+                            {% endif %}
                             <a href="{{ path('app_logout') }}">Se déconnecter</a>
                         </div>
                     </li>
@@ -31,9 +34,9 @@
         </nav>
     </div>
 </header>
+
 <script>
-// JavaScript to toggle the menu on mobile view
-function toggleMenu() {
-    document.querySelector(".nav-links-container").classList.toggle("active");
-}
+    function toggleMenu() {
+        document.querySelector(".nav-links-container").classList.toggle("active");
+    }
 </script>
